tests/NormalTests/paczka1/fuzzy1/96897817.err
Error in line 8: ykMC86oPyTj A532 455,50
Error in line 10: Qunz6 A214 10,88
Error in line 7: A214 S724 86,1
Error in line 13: 5RHfi0 A214 83,2
Error in line 22: fApmXSZo9q A214 79,0
Error in line 31: Qunz6 A532 37,8
